glsl: add new program driver function to standalone compiler

This fixes a regression with the standalone compiler caused by
9d96d3803ab5dc

Note that we change standalone_compiler_cleanup() to no longer
explicitly free the linked shaders as the will be freed when
we free the parent ctx whole_program.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=98774